removed ruby 2.0.0 from Gemfile and moved the secret_token to the settings.yml

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,3 +7,4 @@ production:
   # http://api.rubyonrails.org/classes/ActionMailer/Base.html
   # for all available options
   platform_name: 'AlRide'
+  secret: <%= ENV['SECRET_TOKEN'] %>
