--- a/app.json
+++ b/app.json
@@ -38,6 +38,10 @@
     "RAILS_ENV": {
       "description": "Rack environment",
       "value": "production"
+    },
+    "HEROKU": {
+      "description": "Flag for the Gemfile",
+      "value": "yes"
     }
   },
   "addons": [
