switch from dotenv back to config
This has been changed the other way around, but I really prefer the config
gem over dotenv. And it turns out to be possible to use config in Heroku as
well, so let's do that.

--- a/app.json
+++ b/app.json
@@ -11,27 +11,27 @@
     "postdeploy": "bundle exec rake db:setup"
   },
   "env": {
-    "ALRIDE_PLATFORM_NAME": {
+    "Settings.platform_name": {
       "description": "Name of the application for your usage",
       "value": "AlRide"
     },
-    "ALRIDE_HOST": {
-      "description": "The domain to use to send your emails, this can be the heroku domain for now.",
-      "value": "<insert your appname here>.herokuapp.com"
-    },
-    "ALRIDE_FROM_EMAIL": {
+    "Settings.mail.from": {
       "description": "Email used to send emails out to participants.",
       "value": "noreply@<your heroku app>.herokuapp.com"
     },
-    "ALRIDE_PROTOCOL": {
+    "Settings.mail.default_url_options.host": {
+      "description": "The domain to use to send your emails, this can be the heroku domain for now.",
+      "value": "<insert your appname here>.herokuapp.com"
+    },
+    "Settings.mail.default_url_options.protocol": {
       "description": "Protocol to use in linkes in emails. Heroku supports https.",
       "value": "https"
     },
-    "ALRIDE_PORT": {
+    "Settings.mail.default_url_options.port": {
       "description": "Port to use in linkes in emails",
       "value": "443"
     },
-    "ALRIDE_SECRET": {
+    "Settings.secret_key_base": {
       "description": "A secret key for verifying the integrity of signed cookies.",
       "generator": "secret"
     },
